--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "jsonwebtoken": "^9.0.2",
     "koa": "^2.15.2",
+    "koa-compose": "^4.1.0",
+    "koa-jwt": "^4.0.4",
     "koa-router": "^12.0.1",
     "mongoose": "^8.3.1",
     "node-fetch": "^3.3.2",
